--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
     <script src="app.js"></script>
     <script src="home/home.js"></script>
     <script src="about/about.js"></script>
-    <script src="medstudents/medstudents.js"></script>
+    <script src="volunteers/volunteers.js"></script>
 
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
