Add emacs tmp files to gitignore, begin populating social work and OT volunteering.

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
                 <li><a href="#physicians">Physicians</a></li>
                 <li><a href="#medstudents">Medical Students</a></li>
                 <li><a href="#socialwork">Social Work Students</a></li>
+                <li><a href="#occupationaltherapy">Occupational Therapy Students</a></li>
               </ul>
             </li>
           </ul>
