More messing around with volunteers pages.

--- a/app/volunteers/physicians.html
+++ b/app/volunteers/physicians.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="bs-docs-header" id="content">
+  <div class="jumbotron" id="content">
     <h1>Physician Volunteers</h1>
     <p> Each week, the SNHC is staffed by one physician attending, who teaches and oversees the medical students.</p>
   </div>
