Add subsection mastheads with jumbotrons.

--- a/app/volunteers/physicians.html
+++ b/app/volunteers/physicians.html
@@ -1,9 +1,11 @@
-<div class="container">
-  <div class="jumbotron" id="content">
+<div class="jumbotron">
+  <div class="container" >
     <h1>Physician Volunteers</h1>
     <p> Each week, the SNHC is staffed by one physician attending, who teaches and oversees the medical students.</p>
   </div>
+</div>
 
+<div class="container">
   <h2>Getting Involved</h2>
   <p>We are trying to recruit more <strong>Washington University-affiliated physicians who are boarded in emergency medicine, internal medicine, or OB/GYN</strong> to volunteer to attend at the clinic for approximately 4-5 hours on a Saturday morning, from 8:45AM to about 1:00PM or 2:00PM.</p>
 
