--- a/app/volunteers/medstudents.html
+++ b/app/volunteers/medstudents.html
@@ -1,9 +1,11 @@
-<div class="containier page-header" >
-  <h1>Medical Student Volunteers</h1>
-  <p> The Saturday Neighborhood Health Clinic (SNHC) is staffed each weekend by three teams consisting of a paired preclinical and clinical medical student.</p>
+<div class="jumbotron" >
+  <div class="container" >
+    <h1>Medical Student Volunteers</h1>
+    <p> The Saturday Neighborhood Health Clinic (SNHC) is staffed each weekend by three teams consisting of a paired preclinical and clinical medical student.</p>
+  </div>
 </div>
 
-<div class="container">
+<div class="container">  
   <h2>Sign Up</h2>
   <ol> 
     <li> Log in using "medpriv\" + your Medportal username
