--- a/app/volunteers/socialwork.html
+++ b/app/volunteers/socialwork.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="jumbotron" id="content">
+<div class="jumbotron">
+  <div class="container">
     <h1>Social Work Student Volunteers</h1>
     <p> Coming soon! </p>
   </div>  
