Replace masthead with an image of the SNHC.

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="starter-template">
+<div class="masthead jumbotron">
+  <div class="container">
     <h1>The Saturday Neighborhood Health Clinic</h1>
     <p class="lead"> A community service of the Washington University in St. Louis School of Medicine.</p>
   </div>
