--- a/app/volunteers/medstudents.html
+++ b/app/volunteers/medstudents.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" >
+<div class="jumbotron section-header" >
   <div class="container" >
     <h1>Medical Student Volunteers</h1>
     <p> The Saturday Neighborhood Health Clinic (SNHC) is staffed each weekend by three teams consisting of a paired preclinical and clinical medical student.</p>
