--- a/app/volunteers/occupationaltherapy.html
+++ b/app/volunteers/occupationaltherapy.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" id="content">
+<div class="jumbotron section-header" >
   <div class="container">
     <h1>OT Student Volunteers</h1>
     <p> Coming soon! </p>
