--- a/app/volunteers/physicians.html
+++ b/app/volunteers/physicians.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron section-header" >
   <div class="container" >
     <h1>Physician Volunteers</h1>
     <p> Each week, the SNHC is staffed by one physician attending, who teaches and oversees the medical students.</p>
