--- a/app/volunteers/socialwork.html
+++ b/app/volunteers/socialwork.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron section-header">
   <div class="container">
     <h1>Social Work Student Volunteers</h1>
     <p> Coming soon! </p>
