Modify masthead with image, add section title to services.

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,3 +1,9 @@
+<div class="jumbotron section-header" >
+  <div class="container" >
+    <h1>Services</h1>
+    <p> The SNHC provides two services: a basic care-focused clinic on Saturday mornings and a speicalty-care clinic Wednesday evenings.</p>
+  </div>
+</div>
 
 <div class="container">
   <h1>Saturday Clinic Days</h1>
