--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,5 +1,5 @@
-<div class="masthead jumbotron">
-  <div class="container">
+<div class="jumbotron masthead">
+  <div class="container-float">
     <h1>The Saturday Neighborhood Health Clinic</h1>
     <p class="lead"> A community service of the Washington University in St. Louis School of Medicine.</p>
   </div>
