--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
+            <li><a href="#about">Services</a></li>
             <li><a href="#contact">Contact</a></li>
 	    <li><li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" id="themes">Volunteer<span class="caret"></span></a>
