--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,12 @@
     
     <div ng-view></div>
 
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">If you are experiencing an emergency or urgent condition, please immediately contact your local emergency services or call 9-1-1.</p>
+      </div>
+    </footer>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
