--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">If you are experiencing an emergency or urgent condition, please immediately contact your local emergency services or call 9-1-1.</p>
+        <p class="text-muted">If you are experiencing an emergency or urgent condition, please immediately contact your local emergency services or call 9-1-1. Read our <a href="#legal">Legal Stuff</a> here.</p>
       </div>
     </footer>
 
