--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <!-- Site-custom scripts -->
     <script src="app.js"></script>
     <script src="js/routing.js"></script>
+    <script src="js/date-ctrl.js"></script>
 
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
