--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,13 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+	    <li><li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" id="themes">About<span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                <li><a href="#services">Services</a></li>
+                <li><a href="#faq">FAQs</a></li>
+              </ul>
+            </li>
 	    <li><li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" id="themes">Volunteer<span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
@@ -47,6 +52,7 @@
                 <li><a href="#occupationaltherapy">Occupational Therapy Students</a></li>
               </ul>
             </li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
