--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
 	    <li><li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" id="themes">About<span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" id="themes">For Patients<span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#faq">FAQs</a></li>
