Remove 'here' following 'read our legal disclaimer'.

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
       <div class="container">
         <p class="text-muted">
 	  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-	  If you are experiencing an emergency or urgent condition, please immediately contact your local emergency services or call 9-1-1. Read our <a href="#legal">legal disclaimer</a> here.</p>
+	  If you are experiencing an emergency or urgent condition, please immediately contact your local emergency services or call 9-1-1. Read our <a href="#legal">legal disclaimer</a>.</p>
       </div>
     </footer>
 
