Begin integrating firebase.

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js" ></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.1/fullcalendar.min.js" ></script>
 
+    <!-- Firebase include -->
+    <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
+
     <!-- Site-custom scripts -->
     <script src="app.js"></script>
     <script src="js/routing.js"></script>
