Strip out calendar, begin using AngularFire.

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,9 @@
     <!-- Firebase include -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
 
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
+
     <!-- Site-custom scripts -->
     <script src="app.js"></script>
     <script src="js/routing.js"></script>
