--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,8 @@
                 <li><a href="#occupationaltherapy">Occupational Therapy Students</a></li>
               </ul>
             </li>
+                      <a class="navbar-brand" href="#home">SNHC</a>
+            <li><a href="#partners">For Community Partners</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
