Try to angular-ize mailchimp stuff.

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
       
       ga('create', 'UA-60124235-1', 'auto');
     </script>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -94,6 +95,7 @@
     <script src="app.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/date-ctrl.js"></script>
+    <script src="js/mailchimp.js"></script>
 
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
