Change 'cal.js' to 'volunteer.js'

--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
     <script src="app.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/date-ctrl.js"></script>
-    <script src="js/cal.js"></script>
+    <script src="js/volunteer.js"></script>
     <script src="js/mailchimp.js"></script>
 
   </body>
