--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
               <a class="dropdown-toggle" data-toggle="dropdown" id="themes">For Patients<span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="#services">Services</a></li>
+                <li><a href="#resources">Resources</a></li>
                 <li><a href="#faq">FAQs</a></li>
               </ul>
             </li>
