--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#resources">Resources</a></li>
+                <li><a href="#enespanol">En Español</a></li>
                 <li><a href="#faq">FAQs</a></li>
               </ul>
             </li>
