--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,7 @@
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="#physicians">Physicians</a></li>
                 <li><a href="#medstudents">Medical Students</a></li>
-                <li><a href="#socialwork">Social Work Students</a></li>
-                <li><a href="#occupationaltherapy">Occupational Therapy Students</a></li>
+                <li><a href="#communityvolunteers">Community Volunteers</a></li>
               </ul>
             </li>
             <li><a href="#partners">Partner Organizations</a></li>
